include/flow_ffi.h

// Error codes
typedef enum FlowError {
    FLOW_SUCCESS = 0,
    FLOW_ERROR_INVALID_HANDLE = -1,
    FLOW_ERROR_INVALID_ARGUMENT = -2,
    FLOW_ERROR_NODE_NOT_FOUND = -3,
    FLOW_ERROR_PORT_NOT_FOUND = -4,
    FLOW_ERROR_CONNECTION_FAILED = -5,
    FLOW_ERROR_MODULE_LOAD_FAILED = -6,
    FLOW_ERROR_COMPUTATION_FAILED = -7,
    FLOW_ERROR_OUT_OF_MEMORY = -8,
    FLOW_ERROR_TYPE_MISMATCH = -9,
    FLOW_ERROR_NOT_IMPLEMENTED = -10,
    FLOW_ERROR_UNKNOWN = -999
} FlowError;
typedef struct FlowNode* FlowNodeHandle;
typedef struct FlowConnection* FlowConnectionHandle;
typedef struct FlowEnv* FlowEnvHandle;
typedef struct FlowNodeFactory* FlowNodeFactoryHandle;
// Port introspection
FLOW_FFI_EXPORT FlowError flow_node_get_input_port_keys(FlowNodeHandle node, char*** port_keys,
                                                        size_t* count);
FLOW_FFI_EXPORT FlowError flow_node_get_output_port_keys(FlowNodeHandle node, char*** port_keys,
                                                         size_t* count);
// Get port type information
FLOW_FFI_EXPORT const char* flow_node_get_input_port_type(FlowNodeHandle node,
                                                          const char* port_key);
FLOW_FFI_EXPORT const char* flow_node_get_output_port_type(FlowNodeHandle node,
                                                           const char* port_key);
// Get port description/caption
FLOW_FFI_EXPORT const char*
flow_node_get_port_description(FlowNodeHandle node, const char* port_key, bool is_input_port);
// ============================================================================
// Port Metadata (for Optional Values)
// ============================================================================

// Port metadata structure for UI integration
// The interworking_value_json field contains JSON with type and default value
// Format: {"type":"string|integer|float|boolean|none","value":"<default_value>"}
// Examples:
//   {"type":"string","value":"/home/user/file.png"}
//   {"type":"integer","value":"640"}
//   {"type":"float","value":"2.5"}
//   {"type":"boolean","value":"true"}
//   {"type":"none"}  // Complex types, not editable
typedef struct FlowPortMetadata {
    const char* key;                     // Port identifier
    const char* interworking_value_json; // JSON string with type and value
    bool has_default;                    // Whether default value exists
} FlowPortMetadata;
// Get port metadata for a specific port
FLOW_FFI_EXPORT FlowError flow_node_get_port_metadata(FlowNodeHandle node, const char* port_key,
                                                      FlowPortMetadata* metadata);
// Get metadata for all input ports
FLOW_FFI_EXPORT FlowError flow_node_get_input_ports_metadata(FlowNodeHandle node,
                                                             FlowPortMetadata** metadata_array,
                                                             size_t* count);
// Free port metadata array
FLOW_FFI_EXPORT void flow_free_port_metadata_array(FlowPortMetadata* metadata_array, size_t count);
// Free single port metadata
FLOW_FFI_EXPORT void flow_free_port_metadata(FlowPortMetadata* metadata);
// ============================================================================
// Connection Management
// ============================================================================

// Get connection properties
FLOW_FFI_EXPORT const char* flow_connection_get_id(FlowConnectionHandle conn);
FLOW_FFI_EXPORT const char* flow_connection_get_start_node_id(FlowConnectionHandle conn);
FLOW_FFI_EXPORT const char* flow_connection_get_start_port(FlowConnectionHandle conn);
FLOW_FFI_EXPORT const char* flow_connection_get_end_node_id(FlowConnectionHandle conn);
FLOW_FFI_EXPORT const char* flow_connection_get_end_port(FlowConnectionHandle conn);
// ============================================================================
// Node Factory Management
// ============================================================================

// Create node from factory
FLOW_FFI_EXPORT FlowNodeHandle flow_factory_create_node(FlowNodeFactoryHandle factory,
                                                        const char* class_name, const char* uuid,
                                                        const char* name, FlowEnvHandle env);
// Get available node categories
FLOW_FFI_EXPORT FlowError flow_factory_get_categories(FlowNodeFactoryHandle factory,
                                                      char*** categories, size_t* count);
// Get node classes in a category
FLOW_FFI_EXPORT FlowError flow_factory_get_node_classes(FlowNodeFactoryHandle factory,
                                                        const char* category, char*** classes,
                                                        size_t* count);
// Get friendly name for a node class
FLOW_FFI_EXPORT const char* flow_factory_get_friendly_name(FlowNodeFactoryHandle factory,
                                                           const char* class_name);