dart_package/lib/src/ffi/bindings_generated.dart


  int flow_node_get_input_port_keys(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> port_keys,
    ffi.Pointer<ffi.Size> count,
  ) {
    return _flow_node_get_input_port_keys(
      node,
      port_keys,
      count,
    );
  }

  late final _flow_node_get_input_port_keysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowNodeHandle,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
              ffi.Pointer<ffi.Size>)>>('flow_node_get_input_port_keys');
  late final _flow_node_get_input_port_keys =
      _flow_node_get_input_port_keysPtr.asFunction<
          int Function(
              FlowNodeHandle,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
              ffi.Pointer<ffi.Size>)>();

  int flow_node_get_output_port_keys(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> port_keys,
    ffi.Pointer<ffi.Size> count,
  ) {
    return _flow_node_get_output_port_keys(
      node,
      port_keys,
      count,
    );
  }

  late final _flow_node_get_output_port_keysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowNodeHandle,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
              ffi.Pointer<ffi.Size>)>>('flow_node_get_output_port_keys');
  late final _flow_node_get_output_port_keys =
      _flow_node_get_output_port_keysPtr.asFunction<
          int Function(
              FlowNodeHandle,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
              ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<ffi.Char> flow_node_get_input_port_type(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
  ) {
    return _flow_node_get_input_port_type(
      node,
      port_key,
    );
  }

  late final _flow_node_get_input_port_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(FlowNodeHandle,
              ffi.Pointer<ffi.Char>)>>('flow_node_get_input_port_type');
  late final _flow_node_get_input_port_type =
      _flow_node_get_input_port_typePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowNodeHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> flow_node_get_output_port_type(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
  ) {
    return _flow_node_get_output_port_type(
      node,
      port_key,
    );
  }

  late final _flow_node_get_output_port_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(FlowNodeHandle,
              ffi.Pointer<ffi.Char>)>>('flow_node_get_output_port_type');
  late final _flow_node_get_output_port_type =
      _flow_node_get_output_port_typePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowNodeHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> flow_node_get_port_description(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
    bool is_input_port,
  ) {
    return _flow_node_get_port_description(
      node,
      port_key,
      is_input_port,
    );
  }

  late final _flow_node_get_port_descriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(FlowNodeHandle, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('flow_node_get_port_description');
  late final _flow_node_get_port_description =
      _flow_node_get_port_descriptionPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowNodeHandle, ffi.Pointer<ffi.Char>, bool)>();

  int flow_node_get_port_metadata(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
    ffi.Pointer<FlowPortMetadata> metadata,
  ) {
    return _flow_node_get_port_metadata(
      node,
      port_key,
      metadata,
    );
  }

  late final _flow_node_get_port_metadataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeHandle, ffi.Pointer<ffi.Char>,
              ffi.Pointer<FlowPortMetadata>)>>('flow_node_get_port_metadata');
  late final _flow_node_get_port_metadata =
      _flow_node_get_port_metadataPtr.asFunction<
          int Function(FlowNodeHandle, ffi.Pointer<ffi.Char>,
              ffi.Pointer<FlowPortMetadata>)>();

  int flow_node_get_input_ports_metadata(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Pointer<FlowPortMetadata>> metadata_array,
    ffi.Pointer<ffi.Size> count,
  ) {
    return _flow_node_get_input_ports_metadata(
      node,
      metadata_array,
      count,
    );
  }

  late final _flow_node_get_input_ports_metadataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowNodeHandle,
              ffi.Pointer<ffi.Pointer<FlowPortMetadata>>,
              ffi.Pointer<ffi.Size>)>>('flow_node_get_input_ports_metadata');
  late final _flow_node_get_input_ports_metadata =
      _flow_node_get_input_ports_metadataPtr.asFunction<
          int Function(
              FlowNodeHandle,
              ffi.Pointer<ffi.Pointer<FlowPortMetadata>>,
              ffi.Pointer<ffi.Size>)>();

  void flow_free_port_metadata_array(
    ffi.Pointer<FlowPortMetadata> metadata_array,
    int count,
  ) {
    return _flow_free_port_metadata_array(
      metadata_array,
      count,
    );
  }

  late final _flow_free_port_metadata_arrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<FlowPortMetadata>,
              ffi.Size)>>('flow_free_port_metadata_array');
  late final _flow_free_port_metadata_array = _flow_free_port_metadata_arrayPtr
      .asFunction<void Function(ffi.Pointer<FlowPortMetadata>, int)>();

  void flow_free_port_metadata(
    ffi.Pointer<FlowPortMetadata> metadata,
  ) {
    return _flow_free_port_metadata(
      metadata,
    );
  }

  late final _flow_free_port_metadataPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<FlowPortMetadata>)>>(
      'flow_free_port_metadata');
  late final _flow_free_port_metadata = _flow_free_port_metadataPtr
      .asFunction<void Function(ffi.Pointer<FlowPortMetadata>)>();

  ffi.Pointer<ffi.Char> flow_connection_get_id(
    FlowConnectionHandle conn,
  ) {
    return _flow_connection_get_id(
      conn,
    );
  }

  late final _flow_connection_get_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowConnectionHandle)>>('flow_connection_get_id');
  late final _flow_connection_get_id = _flow_connection_get_idPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowConnectionHandle)>();

  ffi.Pointer<ffi.Char> flow_connection_get_start_node_id(
    FlowConnectionHandle conn,
  ) {
    return _flow_connection_get_start_node_id(
      conn,
    );
  }

  late final _flow_connection_get_start_node_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowConnectionHandle)>>('flow_connection_get_start_node_id');
  late final _flow_connection_get_start_node_id =
      _flow_connection_get_start_node_idPtr
          .asFunction<ffi.Pointer<ffi.Char> Function(FlowConnectionHandle)>();

  ffi.Pointer<ffi.Char> flow_connection_get_start_port(
    FlowConnectionHandle conn,
  ) {
    return _flow_connection_get_start_port(
      conn,
    );
  }

  late final _flow_connection_get_start_portPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowConnectionHandle)>>('flow_connection_get_start_port');
  late final _flow_connection_get_start_port =
      _flow_connection_get_start_portPtr
          .asFunction<ffi.Pointer<ffi.Char> Function(FlowConnectionHandle)>();

  ffi.Pointer<ffi.Char> flow_connection_get_end_node_id(
    FlowConnectionHandle conn,
  ) {
    return _flow_connection_get_end_node_id(
      conn,
    );
  }

  late final _flow_connection_get_end_node_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowConnectionHandle)>>('flow_connection_get_end_node_id');
  late final _flow_connection_get_end_node_id =
      _flow_connection_get_end_node_idPtr
          .asFunction<ffi.Pointer<ffi.Char> Function(FlowConnectionHandle)>();

  ffi.Pointer<ffi.Char> flow_connection_get_end_port(
    FlowConnectionHandle conn,
  ) {
    return _flow_connection_get_end_port(
      conn,
    );
  }

  late final _flow_connection_get_end_portPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowConnectionHandle)>>('flow_connection_get_end_port');
  late final _flow_connection_get_end_port = _flow_connection_get_end_portPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowConnectionHandle)>();

  FlowNodeHandle flow_factory_create_node(
    FlowNodeFactoryHandle factory1,
    ffi.Pointer<ffi.Char> class_name,
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> name,
    FlowEnvHandle env,
  ) {
    return _flow_factory_create_node(
      factory1,
      class_name,
      uuid,
      name,
      env,
    );
  }

  late final _flow_factory_create_nodePtr = _lookup<
      ffi.NativeFunction<
          FlowNodeHandle Function(
              FlowNodeFactoryHandle,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              FlowEnvHandle)>>('flow_factory_create_node');
  late final _flow_factory_create_node =
      _flow_factory_create_nodePtr.asFunction<
          FlowNodeHandle Function(FlowNodeFactoryHandle, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, FlowEnvHandle)>();

  int flow_factory_get_categories(
    FlowNodeFactoryHandle factory1,
    ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> categories,
    ffi.Pointer<ffi.Size> count,
  ) {
    return _flow_factory_get_categories(
      factory1,
      categories,
      count,
    );
  }

  late final _flow_factory_get_categoriesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowNodeFactoryHandle,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
              ffi.Pointer<ffi.Size>)>>('flow_factory_get_categories');
  late final _flow_factory_get_categories =
      _flow_factory_get_categoriesPtr.asFunction<
          int Function(
              FlowNodeFactoryHandle,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
              ffi.Pointer<ffi.Size>)>();

  int flow_factory_get_node_classes(
    FlowNodeFactoryHandle factory1,
    ffi.Pointer<ffi.Char> category,
    ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> classes,
    ffi.Pointer<ffi.Size> count,
  ) {
    return _flow_factory_get_node_classes(
      factory1,
      category,
      classes,
      count,
    );
  }

  late final _flow_factory_get_node_classesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowNodeFactoryHandle,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
              ffi.Pointer<ffi.Size>)>>('flow_factory_get_node_classes');
  late final _flow_factory_get_node_classes =
      _flow_factory_get_node_classesPtr.asFunction<
          int Function(
              FlowNodeFactoryHandle,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
              ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<ffi.Char> flow_factory_get_friendly_name(
    FlowNodeFactoryHandle factory1,
    ffi.Pointer<ffi.Char> class_name,
  ) {
    return _flow_factory_get_friendly_name(
      factory1,
      class_name,
    );
  }

  late final _flow_factory_get_friendly_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(FlowNodeFactoryHandle,
              ffi.Pointer<ffi.Char>)>>('flow_factory_get_friendly_name');
  late final _flow_factory_get_friendly_name =
      _flow_factory_get_friendly_namePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowNodeFactoryHandle, ffi.Pointer<ffi.Char>)>();
